common/observability/ntfy/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/name: ntfy
spec:
  hostnames:
    - ntfy.example.com
  parentRefs:
    - kind: Gateway
      name: private
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: ntfy
          namespace: ntfy
          port: 80
